--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/runtime": "^7.0.0-beta.40",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
+    "chart.js": "^2.7.2",
     "meteor-node-stubs": "^0.3.2",
     "twilio": "^3.10.1"
   }
